--- a/index.html
+++ b/index.html
@@ -9,6 +9,6 @@
 <body>
 <h1>ビジュアルコンテンツデザイン</h1>
 <p>吉原　尚紀</p>
-<p> <img src="https://github.com/kodoukodou/visual-content-design/blob/main/%E9%A3%B2%E9%A3%9F%E5%BA%97.png" width="212" height="209" alt=""/></p>
+<p> <img src="飲食店.png" width="212" height="209" alt=""/></p>
 </body>
 </html>
