--- a/index.html
+++ b/index.html
@@ -2,11 +2,13 @@
 <html>
 <head>
 <meta charset="utf-8">
-<title>ビジュアルコンテンツデザイン</title>
+<title>sサンプル</title>
+<link href="newcss.css" rel="stylesheet" type="text/css">
 </head>
 
 <body>
 <h1>ビジュアルコンテンツデザイン</h1>
-<p>第1回 <a href="サンプル.html">サンプル</a></p>
+<p>吉原　尚紀</p>
+<p> <img src="飲食店.png" width="212" height="209" alt=""/></p>
 </body>
 </html>
