--- a/index.html
+++ b/index.html
@@ -7,6 +7,6 @@
 
 <body>
 <h1>ビジュアルコンテンツデザイン</h1>
-<p>第1回 <a href="サンプル.html">サンプル</a></p>
+<p>第1回 <a href="第１回/サンプル.html">サンプル</a></p>
 </body>
 </html>
