--- a/第１回/サンプル.html
+++ b/第１回/サンプル.html
@@ -9,6 +9,6 @@
 <body>
 <h1>ビジュアルコンテンツデザイン</h1>
 <p>吉原　尚紀</p>
-<p> <img src="飲食店.png" width="212" height="209" alt=""/></p>
+<p> <img src="第１回/飲食店.png" width="212" height="209" alt=""/></p>
 </body>
 </html>
