--- a/index.html
+++ b/index.html
@@ -7,8 +7,8 @@
 
 <body>
 <h1>ビジュアルコンテンツデザイン</h1>
-<p>第2回 <a href="第3回/サンプル.html">サンプル</a></p>
-<p>第4回 <a href="第2回/サンプル.html">サンプル</a></p>
+<p>第2回 <a href="第回/サンプル.html">サンプル</a></p>
+<p>第4回 <a href="https://kodoukodou.github.io/cake/">サンプル</a></p>
 <p>第5回 <a href="https://kodoukodou.github.io/menu/">サンプル</a></p>
 </body>
 </html>
