--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
 <body>
 <h1>ビジュアルコンテンツデザイン</h1>
 <p>第2回 <a href="第2回/サンプル.html">サンプル</a></p>
-<p>第4回 <a href="https://kodoukodou.github.io/cake/">ケーキ屋</a></p>
-<p>第5回 <a href="https://kodoukodou.github.io/menu/">メニューバー</a></p>
+<p>第4回 <a href="第4回/div練習.htm">ケーキ屋</a></p>
+<p>第5回 <a href="第5回/テスト.htm">メニューバー</a></p>
 </body>
 </html>
